Adding Python Code

--- a/Data_preprocessing_and_analysis.ipynb
+++ b/Data_preprocessing_and_analysis.ipynb
@@ -230,7 +230,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "data = pd.read_csv('/Users/ashutoshshanker/Desktop/Dataset_BI_Project/hotel_bookings_dataset.csv')\n",
+    "data = pd.read_csv('./hotel_bookings_dataset.csv')\n",
     "\n",
     "data.head()"
    ]
